[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pushbutan"
version = "0.1.0"
description = "Tool to automate creation of rocket-platform developer instances"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
    { name = "Anaconda, Inc." }
]
dependencies = [
    "githubkit",
]

[project.scripts]
pushbutan = "pushbutan.pushbutan:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["pushbutan*"]
