[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pushbutan"
version = "0.1.0"
description = "Manage GPU instances in rocket-platform"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
    { name = "Anaconda, Inc." }
]
dependencies = [
    "githubkit",
    "click"
]

[project.scripts]
pushbutan = "pushbutan.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["pushbutan*"]
