[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pushbutan"
version = "0.1.0"
description = "Manage GPU instances in rocket-platform"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
    { name = "Anaconda, Inc." }
]
dependencies = [
    "githubkit",
    "click",
    "mcp>=1.0.0",
    "mcp[cli]>=1.0.0"
]

[project.scripts]
pushbutan = "pushbutan.cli:main"
mcpserver = "pushbutan.mcpserver:run_mcp_server"

[tool.setuptools.packages.find]
where = ["src"]
include = ["pushbutan*"]
